# bot-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLTE.md
.github/workflows/: ci.yml  pre-commit.yml  type-check.yml
src/: __init__.py  bot.py  constants.py  errors.py  log.py
src/components/: __init__.py  support.py  trash.py
src/errors/: __init__.py  base.py  http.py
src/exts/: delete.py  help.py  ping.py
src/lang/: en-US.json
src/util/: http.py  localize.py
